# birdbot

./: .gitignore  .gitmodules  Dockerfile  README.md  bot.py  config.yaml.example  pyproject.toml
